do not let LO's autoextension handling interfere with KFileDialog's(fdo#52546)

Change-Id: I73263a74d7b9bbf4a99e86773854e69f747e19d5